cabal-version:      2.4
name:               haskell-game-server
version:            0.1.0.0
author:             Nguyễn Ngọc Thiện, Dương Quang Đông
maintainer:         gemini@example.com
build-type:         Simple

common common-options
    ghc-options:
        - -threaded
        - -rtsopts
        - -with-rtsopts=-N
        - -Wall

    default-language:   Haskell2010
    build-depends:
        base >= 4.7 && < 5,
        network,
        binary,
        containers,
        stm,
        parallel,
        random,
        gloss

library
    import:             common-options
    exposed-modules:    GameData
    hs-source-dirs:     src

executable server
    import:             common-options
    main-is:            Server.hs
    hs-source-dirs:     app
    build-depends:      haskell-game-server

executable client
    import:             common-options
    main-is:            Client.hs
    hs-source-dirs:     app
    build-depends:      haskell-game-server