cabal-version:      2.4
name:               haskell-final
version:            0.1.0.0
author:             Nguyen Ngoc Thien, Duong Quang Dong
build-type:         Simple

common common-options
    ghc-options:
        -threaded
        -rtsopts
        -with-rtsopts=-N
        -Wall
    default-language:   Haskell2010
    build-depends:
        base >= 4.7 && < 5,
        network,
        bytestring,
        binary,
        containers,
        stm,
        parallel,
        random,
        gloss,
        gloss-juicy

library
    import:           common-options
    -- CẬP NHẬT exposed-modules TẠI ĐÂY
    exposed-modules:  Game.Data,
                      Game.Messaging,
                      Game.Constants,
                      Game.Logic,
                      Game.Physics,
                      Game.AI,
                      Game.Core,
                      Game.Systems,
                      Game.Net,
                      Client.Render,
                      Client.Input,
                      Client.Network,
                      Client.State
    hs-source-dirs:   src

executable server
    import:             common-options
    main-is:            Server.hs
    hs-source-dirs:     app
    build-depends:      haskell-final

executable client
    import:             common-options
    main-is:            Client.hs
    hs-source-dirs:     app
    build-depends:      haskell-final
    buildable:          True